--- a/Roommate/View/Common/RateView.xib
+++ b/Roommate/View/Common/RateView.xib
@@ -49,13 +49,13 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNl-WH-llm">
-                                    <rect key="frame" x="295" y="0.0" width="147.5" height="30"/>
+                                    <rect key="frame" x="147.5" y="0.0" width="147.5" height="30"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyQ-F2-3rj">
-                                    <rect key="frame" x="147.5" y="0.0" width="147.5" height="30"/>
+                                    <rect key="frame" x="295" y="0.0" width="147.5" height="30"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -63,19 +63,21 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="qyQ-F2-3rj" secondAttribute="bottom" id="52h-PX-LNK"/>
+                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="width" secondItem="yim-Wg-Um3" secondAttribute="width" id="0fX-Df-6nD"/>
                                 <constraint firstItem="yim-Wg-Um3" firstAttribute="leading" secondItem="iFT-NG-aeq" secondAttribute="leading" id="94r-iL-P2E"/>
-                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="leading" secondItem="yim-Wg-Um3" secondAttribute="trailing" id="DaU-JQ-Eqn"/>
                                 <constraint firstItem="yim-Wg-Um3" firstAttribute="width" secondItem="iFT-NG-aeq" secondAttribute="width" multiplier="1/3" id="Haq-Bb-IP9"/>
-                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="width" secondItem="yim-Wg-Um3" secondAttribute="width" id="ICU-hF-Q2M"/>
                                 <constraint firstAttribute="height" constant="30" id="Lhg-ET-vuW"/>
-                                <constraint firstItem="iNl-WH-llm" firstAttribute="width" secondItem="yim-Wg-Um3" secondAttribute="width" id="MoD-Ft-7ba"/>
-                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="top" secondItem="iFT-NG-aeq" secondAttribute="top" id="VJI-BF-L5n"/>
-                                <constraint firstAttribute="bottom" secondItem="iNl-WH-llm" secondAttribute="bottom" id="a9F-w3-ly0"/>
-                                <constraint firstItem="iNl-WH-llm" firstAttribute="leading" secondItem="qyQ-F2-3rj" secondAttribute="trailing" id="lR3-e9-0w9"/>
+                                <constraint firstItem="iNl-WH-llm" firstAttribute="leading" secondItem="yim-Wg-Um3" secondAttribute="trailing" id="M9m-bG-pyd"/>
+                                <constraint firstItem="iNl-WH-llm" firstAttribute="width" secondItem="yim-Wg-Um3" secondAttribute="width" id="QSI-E4-zAg"/>
+                                <constraint firstItem="iNl-WH-llm" firstAttribute="top" secondItem="iFT-NG-aeq" secondAttribute="top" id="TyM-eg-ZrI"/>
+                                <constraint firstAttribute="bottom" secondItem="iNl-WH-llm" secondAttribute="bottom" id="YMG-aw-26h"/>
+                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="top" secondItem="iFT-NG-aeq" secondAttribute="top" id="ZXY-MZ-Q0Z"/>
+                                <constraint firstItem="iNl-WH-llm" firstAttribute="height" secondItem="yim-Wg-Um3" secondAttribute="height" id="cix-rA-NbH"/>
+                                <constraint firstAttribute="trailing" secondItem="qyQ-F2-3rj" secondAttribute="trailing" id="mUw-Vq-IJP"/>
+                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="height" secondItem="yim-Wg-Um3" secondAttribute="height" id="weM-rC-aoN"/>
+                                <constraint firstItem="qyQ-F2-3rj" firstAttribute="leading" secondItem="iNl-WH-llm" secondAttribute="trailing" id="xJA-qP-56c"/>
                                 <constraint firstAttribute="bottom" secondItem="yim-Wg-Um3" secondAttribute="bottom" id="xT4-mi-aNB"/>
                                 <constraint firstItem="yim-Wg-Um3" firstAttribute="top" secondItem="iFT-NG-aeq" secondAttribute="top" id="ykM-pm-HnC"/>
-                                <constraint firstItem="iNl-WH-llm" firstAttribute="top" secondItem="iFT-NG-aeq" secondAttribute="top" id="ztv-5a-TZN"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6h-cS-ypB">
